--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PWA: Installable website</title>
     <link rel="manifest" href="manifest.json" />
-    <link rel="apple-touch-icon" href="image/icon-24.png" />
-    <link rel="apple-touch-icon" href="image/icon-32.png" />
-    <link rel="apple-touch-icon" href="image/icon-48.png" />
-    <link rel="apple-touch-icon" href="image/icon-64.png" />
-    <link rel="apple-touch-icon" href="image/icon-72.png" />
-    <link rel="apple-touch-icon" href="image/icon-96.png" />
-    <link rel="apple-touch-icon" href="image/icon-128.png" />
-    <link rel="apple-touch-icon" href="image/icon-256.png" />
+    <link rel="apple-touch-icon" href="image/icon-24.jpg" />
+    <link rel="apple-touch-icon" href="image/icon-32.jpg" />
+    <link rel="apple-touch-icon" href="image/icon-48.jpg" />
+    <link rel="apple-touch-icon" href="image/icon-64.jpg" />
+    <link rel="apple-touch-icon" href="image/icon-72.jpg" />
+    <link rel="apple-touch-icon" href="image/icon-96.jpg" />
+    <link rel="apple-touch-icon" href="image/icon-128.jpg" />
+    <link rel="apple-touch-icon" href="image/icon-256.jpg" />
     <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
     <meta name="theme-color" content="#db4938" />
 
